--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
         "eslint": "^8.2.0",
         "eslint-plugin-react": "^7.27.1",
         "graphql": "^16.0.1",
+        "i18next": "^21.5.2",
         "react": "^17.0.0",
-        "react-dom": "^17.0.0"
+        "react-dom": "^17.0.0",
+        "react-i18next": "^11.14.2"
     },
     "devDependencies": {
         "@types/node": "^16.11.9",
